[package]
name = "ble-ws-central"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bitflags = "1.3.2"
ble-ws-api = { path = "../ble-ws-api" }
bytemuck = { version = "1.5", features = ["derive"] }
byteorder = "1.4.3"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
derive_more = "0.99.16"
directories-next = "2.0.0"
envy = "0.4.2"
eyre = "0.6.5"
flume = "0.10.8"
futures-util = "0.3.16"
heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
hex-literal = "0.3.3"
mqtt-protocol = { version = "0.11.0", default-features = false }
nix = "0.22.0"
nom = "7.0.0"
nonzero_ext = "0.3.0"
num_enum = "0.5.4"
once_cell = "1.8.0"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
slotmap = "1.0.6"
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = [
        "rt-multi-thread",
        "sync",
        "time",
        "signal",
        "macros",
        "net",
] }
tokio-mqtt = { path = "tokio-mqtt" }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tonic = "0.5.0"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19" }
url = { version = "2.2.2", features = ["serde"] }
uuid = "0.8.2"
zbus = { git = "https://gitlab.freedesktop.org/dbus/zbus" }
zvariant = { git = "https://gitlab.freedesktop.org/dbus/zbus" }
