[package]
name = "tokio-mqtt"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
futures-util = { version = "0.3.8", features = ["sink"] }
log = "0.4.11"
mqtt-protocol = { version = "0.10.0", default-features = false }
thiserror = "1.0.22"
tokio = { version = "1.0.0", features = ["rt", "sync", "net", "io-util"] }
tokio-rustls = "0.22.0"
tokio-stream = "0.1.0"
tokio-util = { version = "0.6.0", features = ["codec"], default-features = false }
url = "2.2.0"
